@@ -38,6 +38,8 @@ guitype *new_gui(void);
 GtkWidget *create_mainwindow (void);
 gboolean on_mainwindow_delete_event (GtkWidget * widget, GdkEvent * event,
 				     gpointer user_data);
+gboolean on_mainwindow_destroy_event (GtkWidget * widget, GdkEvent * event,
+				     gpointer user_data);
 void on_mainentry_activate (GtkEditable * editable, gpointer user_data);
 gboolean on_mainwindow_key_press_event(GtkWidget *widget, GdkEventKey *event,
 				     gpointer user_data);
