@@ -2,8 +2,9 @@ xdx (0.3) unstable; urgency=low
 
   * Allow the main window to shrink.
   * Add command line history.
+  * Save size and position of the main window.
 
- -- Joop Stakenborg <pa3aba@debian.org>  Wed, 30 Oct 2002 19:15:17 +0100
+ -- Joop Stakenborg <pa3aba@debian.org>  Wed, 30 Oct 2002 23:56:22 +0100
 
 xdx (0.2) unstable; urgency=low
 
